--- a/estilo.css
+++ b/estilo.css
@@ -100,6 +100,32 @@
     #profesion {
       font-family: 'Quicksand', sans-serif;
     }
+
+    #diploma1 {
+      display: none;
+    }
+
+    #diplomaa {
+
+      width: 450px;
+      height: 400px;
+    
+    }
+    #diploma2 {
+      display: none;
+    }
+
+    #diplomaaa {
+
+      width: 300px;
+      height: 300px;
+    
+    }
+
+
+    .boton:hover {
+      cursor: pointer;
+    }
   }
 
 
@@ -207,13 +233,25 @@
       #diplomas {
         margin-top: 10px;
       }
-
-      #icono {
-        display: none;
-      }
       #diploma1 {
         display: none;
-
+      }
+  
+      #diplomaa {
+  
+        width: 150px;
+        height: 150px;
+      
+      }
+      #diploma2 {
+        display: none;
+      }
+  
+      #diplomaaa {
+  
+        width: 100px;
+        height: 100px;
+      
       }
 
       .boton:hover {
